Add `radicle-node` (ansible-role-radicle-node) to files in templates/
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/templates/setup.yml
+++ b/templates/setup.yml
@@ -661,6 +661,10 @@
     - role: galaxy/radicale
     # /role-specific:radicale
 
+    # role-specific:radicle_node
+    - role: galaxy/radicle_node
+    # /role-specific:radicle_node
+
     # role-specific:reactflux
     - role: galaxy/reactflux
     # /role-specific:reactflux
