Add Radicle Explorer (ansible-role-radicle-explorer) to files in templates/
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/templates/setup.yml
+++ b/templates/setup.yml
@@ -661,6 +661,10 @@
     - role: galaxy/radicale
     # /role-specific:radicale
 
+    # role-specific:radicle_explorer
+    - role: galaxy/radicle_explorer
+    # /role-specific:radicle_explorer
+
     # role-specific:radicle_httpd
     - role: galaxy/radicle_httpd
     # /role-specific:radicle_httpd
