--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -612,6 +612,10 @@
   version: v3.5.8.2-0
   name: radicale
   activation_prefix: radicale_
+- src: git+https://seed.radicle.garden/zopwjin5Vh5dMgdHWiifJ2cg3bQW.git
+  version: v0.0.0-0
+  name: radicle_explorer
+  activation_prefix: radicle_explorer_
 - src: git+https://seed.radicle.garden/z3roZFCprFZhmK8BvkrsKwkLZXr56.git
   version: v0.20.0-0
   name: radicle_httpd
