Add Moodist (ansible-role-moodist) to files in templates/
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/templates/setup.yml
+++ b/templates/setup.yml
@@ -489,6 +489,10 @@
     - role: galaxy/mongodb
     # /role-specific:mongodb
 
+    # role-specific:moodist
+    - role: galaxy/moodist
+    # /role-specific:moodist
+
     # role-specific:mosquitto
     - role: galaxy/mosquitto
     # /role-specific:mosquitto
