--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -424,6 +424,10 @@
   version: v8.0.12-1
   name: mongodb
   activation_prefix: mongodb_
+- src: git+https://seed.radicle.garden/z4Ez9aU119yFMs59cnA3KUnExFAeN.git
+  version: v2.4.0-0
+  name: moodist
+  activation_prefix: moodist_
 - src: git+https://github.com/mother-of-all-self-hosting/ansible-role-mosquitto.git
   version: v2.0.22-3
   name: mosquitto
