--- a/templates/setup.yml
+++ b/templates/setup.yml
@@ -161,6 +161,10 @@
     - role: galaxy/barassistant
     # /role-specific:barassistant
 
+    # role-specific:bentopdf
+    - role: galaxy/bentopdf
+    # /role-specific:bentopdf
+
     # role-specific:bind
     - role: galaxy/bind
     # /role-specific:bind
