Add PdfDing (ansible-role-pdfding) to files in templates/
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/templates/setup.yml
+++ b/templates/setup.yml
@@ -589,6 +589,10 @@
     - role: galaxy/paperless
     # /role-specific:paperless
 
+    # role-specific:pdfding
+    - role: galaxy/pdfding
+    # /role-specific:pdfding
+
     # role-specific:peertube
     - role: galaxy/peertube
     # /role-specific:peertube
