--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -524,6 +524,10 @@
   version: v2.20.0-0
   name: paperless
   activation_prefix: paperless_
+- src: git+https://seed.radicle.garden/z2cZCZP8Mu4LYMbHKaTdnP1otc46L.git
+  version: v1.4.1-0
+  name: pdfding
+  activation_prefix: pdfding_
 - src: git+https://github.com/mother-of-all-self-hosting/ansible-role-peertube.git
   version: v7.2.3-5
   name: peertube
