--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -820,8 +820,8 @@
   version: v6.8.3-1
   name: wordpress
   activation_prefix: wordpress_
-- src: git+https://github.com/ZenKyma/ansible-role-writefreely.git
-  version: v0.15.0-1
+- src: git+https://seed.radicle.garden/z2i8BkHXzRvK1ZtGwHuvLACRswXgA.git
+  version: v0.16.0-0
   name: writefreely
   activation_prefix: writefreely_
 - src: git+https://github.com/mother-of-all-self-hosting/ansible-role-yacy.git
