Add SolidInvoice (ansible-role-solidinvoice) to files in templates/
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/templates/setup.yml
+++ b/templates/setup.yml
@@ -749,6 +749,10 @@
     - role: galaxy/soft_serve
     # /role-specific:soft_serve
 
+    # role-specific:solidinvoice
+    - role: galaxy/solidinvoice
+    # /role-specific:solidinvoice
+
     # role-specific:sonarr
     - role: galaxy/sonarr
     # /role-specific:sonarr
