Docker: add registry setting

--- a/inventory/host_vars/domain/vars.yml
+++ b/inventory/host_vars/domain/vars.yml
@@ -89,6 +89,8 @@ mash_playbook_docker_installation_daemon_options_custom:
       size: 25
   dns:
     - "10.1.154.10"
+  registry-mirrors:
+    - "https://mirror.gcr.io"
 
 ########################################################################
 #                                                                      #
