Add MailCatcher (ansible-role-mailcatcher) to files in templates/
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -384,6 +384,10 @@
   version: v3.6.1-0
   name: loki
   activation_prefix: loki_
+- src: https://seed.radicle.garden/z3QmarrgiC7ZGmd7UCTW2EZTheCZb.git
+  version: v0.10.0-0
+  name: mailcatcher
+  activation_prefix: mailcatcher_
 - src: git+https://github.com/mother-of-all-self-hosting/ansible-role-mariadb.git
   version: v12.1.2-0
   name: mariadb
