Add MailCrab (ansible-role-mailcrab) to files in templates/
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -388,6 +388,10 @@
   version: v0.10.0-0
   name: mailcatcher
   activation_prefix: mailcatcher_
+- src: git+https://seed.radicle.garden/z3rh69mtu7bBk5K1WmAkVEBTy6NpW.git
+  version: v0.10.0-0
+  name: mailcrab
+  activation_prefix: mailcrab_
 - src: git+https://github.com/mother-of-all-self-hosting/ansible-role-mariadb.git
   version: v12.1.2-0
   name: mariadb
