Add MailCrab (ansible-role-traefik-certs-dumper) to files in templates/
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -776,6 +776,10 @@
   version: v3.6.4-0
   name: traefik
   activation_prefix: mash_
+- src: git+https://github.com/mother-of-all-self-hosting/ansible-role-traefik-certs-dumper.git
+  version: v2.10.0-3
+  name: traefik_certs_dumper
+  activation_prefix: traefik_certs_dumper_
 - src: git+https://github.com/Bergruebe/ansible-role-tsdproxy.git
   version: v1.4.7-0
   name: tsdproxy
