--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -708,7 +708,7 @@
   version: v0.10.0-1
   name: soft_serve
   activation_prefix: soft_serve_
-- src: https://seed.radicle.garden/zeEwXM9Fp4C8NU4oQfNg474Vivwu.git
+- src: git+https://seed.radicle.garden/zeEwXM9Fp4C8NU4oQfNg474Vivwu.git
   version: v2.3.10-0
   name: solidinvoice
   activation_prefix: solidinvoice_
@@ -732,7 +732,7 @@
   version: abfb18b6862108bbf24347500446203170324d7f
   name: swap
   activation_prefix: system_swap_
-- src: https://github.com/mother-of-all-self-hosting/ansible-role-syncstorage-rs-docker.git
+- src: git+https://github.com/mother-of-all-self-hosting/ansible-role-syncstorage-rs-docker.git
   version: v0.21.0-4
   name: syncstorage_rs_docker
   activation_prefix: syncstorage_rs_docker_
