Add Ergo (ansible-role-ergo) to files in templates/
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/templates/setup.yml
+++ b/templates/setup.yml
@@ -241,6 +241,10 @@
     - role: galaxy/endlessh
     # /role-specific:endlessh
 
+    # role-specific:ergo
+    - role: galaxy/ergo
+    # /role-specific:ergo
+
     # role-specific:etcd
     - role: galaxy/etcd
     # /role-specific:etcd
