--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -168,6 +168,10 @@
   version: v2025-0
   name: endlessh
   activation_prefix: endlessh_
+- src: git+https://seed.radicle.garden/z2CSxS3YLtJYM87TyGZkZCan3uoSJ.git
+  version: v2.16.0-0
+  name: ergo
+  activation_prefix: ergo_
 - src: git+https://github.com/mother-of-all-self-hosting/ansible-role-etcd.git
   version: v3.6.4-3
   name: etcd
