Add SMP server (ansible-role-smp-server) to files in templates/
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -704,6 +704,10 @@
   version: v2.7.0-2
   name: sftpgo
   activation_prefix: sftpgo_
+- src: git+https://seed.radicle.garden/zXf3qnvPwC2UsBpfTYmPesL5KSZc.git
+  version: v6.4.5-0
+  name: smp_server
+  activation_prefix: smp_server_
 - src: git+https://seed.radicle.garden/znvd313jEb23f9AUNmtsweE7YHCK.git
   version: v2.11.0-0
   name: snowflake
