--- a/inventory/host_vars/domain/vars.yml
+++ b/inventory/host_vars/domain/vars.yml
@@ -35,6 +35,8 @@ system_security_ssh_port: "{{ ansible_ssh_port }}"
 
 system_security_ssh_authorizedkeys_host: ["{{ ssh_key_1 }}", "{{ ssh_key_2 }}"]  # list of authorized public keys
 system_security_ssh_unauthorizedkeys_host: []  # list of unauthorized/revoked public keys
+system_security_ssh_extension: |
+  AllowTcpForwarding yes
 # /SSH
 
 
