Add InspIRCd (ansible-role-inspircd) to files in templates/
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -312,6 +312,10 @@
   version: v2.8.0-0
   name: influxdb
   activation_prefix: influxdb_
+- src: git+https://seed.radicle.garden/zA2EcZYaHBzoc3XudvDhVDBjT42a.git
+  version: v4.9.0-0
+  name: inspircd
+  activation_prefix: inspircd_
 - src: git+https://github.com/spatterIight/ansible-role-jackett.git
   version: v0.23.43-1
   name: jackett
