--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -480,6 +480,10 @@
   version: v32.0.3-0
   name: nextcloud
   activation_prefix: nextcloud_
+- src: git+https://github.com/spatterIight/ansible-role-nifi.git
+  version: v2.6.0-4
+  name: nifi
+  activation_prefix: nifi_
 - src: git+https://seed.radicle.garden/z8vyzN3a8DmwhcUq3949SihKd1Wh.git
   version: v2025.10.0-1
   name: nocdnbs
