Add Mailpit (ansible-role-mailpit) to files in templates/
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -404,6 +404,10 @@
   version: v0.10.0-0
   name: mailcrab
   activation_prefix: mailcrab_
+- src: git+https://seed.radicle.garden/z3BKJz8wwtQHfXm8MPX81h4izT2QS.git
+  version: v1.28.0-0
+  name: mailpit
+  activation_prefix: mailpit_
 - src: git+https://github.com/mother-of-all-self-hosting/ansible-role-mariadb.git
   version: v12.1.2-0
   name: mariadb
