Add Databasus (ansible-role-databasus) to files in templates/
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/templates/setup.yml
+++ b/templates/setup.yml
@@ -205,6 +205,10 @@
     - role: galaxy/cyberchef
     # /role-specific:cyberchef
 
+    # role-specific:databasus
+    - role: galaxy/databasus
+    # /role-specific:databasus
+
     # role-specific:docker_registry
     - role: galaxy/docker_registry
     # /role-specific:docker_registry
