--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -124,6 +124,10 @@
   version: v10.19.4-3
   name: cyberchef
   activation_prefix: cyberchef_
+- src: git+https://seed.progressiv.dev/zeQ4hXq2LkbADcndSsjesgq9kDPf.git
+  version: v2.16.3-0
+  name: databasus
+  activation_prefix: databasus_
 - src: git+https://github.com/geerlingguy/ansible-role-docker
   version: 7.9.0
   name: docker
