Add PruneMate (ansible-role-prunemate) to files in templates/
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/templates/setup.yml
+++ b/templates/setup.yml
@@ -701,6 +701,10 @@
     - role: galaxy/promtail
     # /role-specific:promtail
 
+    # role-specific:prunemate
+    - role: galaxy/prunemate
+    # /role-specific:prunemate
+
     # role-specific:qbittorrent
     - role: galaxy/qbittorrent
     # /role-specific:qbittorrent
