--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -652,6 +652,10 @@
   version: v3.6.3-0
   name: promtail
   activation_prefix: promtail_
+- src: git+https://seed.radicle.garden/zTsddBnXnhE3i4xhzsEX12deb4fx.git
+  version: v1.3.1-0
+  name: prunemate
+  activation_prefix: prunemate_
 - src: git+https://github.com/mother-of-all-self-hosting/ansible-role-qbittorrent.git
   version: v5.1.4-0
   name: qbittorrent
