Add Converse (ansible-role-converse) to files in templates/
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/templates/setup.yml
+++ b/templates/setup.yml
@@ -193,6 +193,10 @@
     - role: galaxy/collabora_online
     # /role-specific:collabora_online
 
+    # role-specific:converse
+    - role: galaxy/converse
+    # /role-specific:converse
+
     # role-specific:convertx
     - role: galaxy/convertx
     # /role-specific:convertx
