--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -112,6 +112,10 @@
   version: v0.4.2-0
   name: container_socket_proxy
   activation_prefix: mash_
+- src: git+https://seed.radicle.garden/z22bUmhZzA5VWtmKERFkEjGzdPuke.git
+  version: v12.0.0-0
+  name: converse
+  activation_prefix: converse_
 - src: git+https://github.com/mother-of-all-self-hosting/ansible-role-convertx.git
   version: v0.16.0-0
   name: convertx
