ansible: enable SSH mux + pipelining; disable log_path; short control path

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,3 +4,8 @@ result_format = yaml
 
 [connection]
 pipelining = True
+
+[ssh_connection]
+pipelining = True
+control_path_dir = /tmp/ansible-cp
+ssh_args = -o ControlMaster=auto -o ControlPersist=60s
