--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -544,6 +544,10 @@
   version: v0.0.0-3
   name: origamivault
   activation_prefix: origamivault_
+- src: git+https://seed.radicle.garden/z3cspgyZXPNcnzNXCYKsEGJK7dKKA.git
+  version: v1.20.1-0
+  name: ots
+  activation_prefix: ots_
 - src: git+https://seed.radicle.garden/zvzJe15VMBkGd2CMBctvpVZgmQG5.git
   version: v2.14.2-1
   name: otterwiki
