--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/inventory
+# /inventory
 
 # ignore roles pulled by ansible-galaxy
 /roles/galaxy/*
@@ -19,3 +19,7 @@
 
 /group_vars/*
 !/group_vars/.gitkeep
+
+# custom ignores
+.ansible
+
