--- a/templates/setup.yml
+++ b/templates/setup.yml
@@ -597,6 +597,10 @@
     - role: galaxy/oauth2_proxy
     # /role-specific:oauth2_proxy
 
+    # role-specific:onion_service_tor
+    - role: galaxy/onion_service_tor
+    # /role-specific:onion_service_tor
+
     # role-specific:onlyoffice_docs
     - role: galaxy/onlyoffice_docs
     # /role-specific:onlyoffice_docs
