Add Moner.ooo (ansible-role-monerooo) to files in templates/
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -464,6 +464,10 @@
   version: v4.1.0-2
   name: mobilizon
   activation_prefix: mobilizon_
+- src: git+https://iris.radicle.xyz/z3i2ogEXxuSzVAxVaRuoydAiDCBKi.git
+  version: v0.0.0-0
+  name: monerooo
+  activation_prefix: monerooo_
 - src: git+https://github.com/mother-of-all-self-hosting/ansible-role-mongodb.git
   version: v8.0.12-2
   name: mongodb
