Add CodiMD (ansible-role-codimd) to files in templates/
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -108,6 +108,10 @@
   version: v25.12.3.21-0
   name: clickhouse
   activation_prefix: clickhouse_
+- src: git+https://iris.radicle.xyz/zp12kTQqmgqnFpUU6gPyVq19HNMD.git
+  version: v2.6.1-0
+  name: codimd
+  activation_prefix: codimd_
 - src: git+https://github.com/mother-of-all-self-hosting/ansible-role-collabora-online.git
   version: v25.04.8.1.1-0
   name: collabora_online
