adds customisation possibilities

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,21 +6,24 @@ RUN go mod download
 WORKDIR /go/agru/cmd/agru
 RUN go build .
 
-FROM ghcr.io/willhallonline/docker-ansible:2.17-alpine-3.22
+FROM alpine:3.22
 RUN apk add --update --no-cache \
-    libc6-compat \
+    ansible \
+    ansible-core \
+    ansible-lint \
+    git \
     grep \
-    python3 \
-    py3-pip \
+    jq \
+    just \
+    libc6-compat \
+    nodejs \
+    npm \
+    openssh-client \
+    pre-commit \
+    pwgen \
+    py3-passlib \
     py3-regex \
     py3-yaml \
-    py3-passlib \
-    just \
-    pre-commit \
-    ansible-lint \
-    pwgen \
-    jq \
-    nodejs npm && \
-    pip3 install bwenv && \
-    npm install -g @bitwarden/cli jfq
+    python3
+RUN npm install -g @bitwarden/cli jfq
 COPY --from=agru /go/agru/cmd/agru/agru /usr/bin/agru
