Add Fider (ansible-role-fider) to files in templates/
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/templates/setup.yml
+++ b/templates/setup.yml
@@ -285,6 +285,10 @@
     - role: galaxy/farmos
     # /role-specific:farmos
 
+    # role-specific:fider
+    - role: galaxy/fider
+    # /role-specific:fider
+
     # role-specific:filebrowser
     - role: galaxy/filebrowser
     # /role-specific:filebrowser
