--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -220,6 +220,10 @@
   version: v3.4.5-1
   name: farmos
   activation_prefix: farmos_
+- src: git+https://seed.radicle.garden/z3Fe49p3uVZpC43KdB5gDCTmr8u7Y.git
+  version: v0.32.0-0
+  name: fider
+  activation_prefix: fider_
 - src: git+https://seed.radicle.garden/z318zbpe2RNjFqVzXqPoDDJvvohbw.git
   version: v2.56.0-0
   name: filebrowser
