--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -100,6 +100,10 @@
   version: v0.52.8-0
   name: changedetection
   activation_prefix: changedetection_
+- src: git+https://iris.radicle.xyz/z3P5L5p1gs7TGCpmhaXKUYmTJNKpi.git
+  version: v4.10.2-0
+  name: cinny
+  activation_prefix: cinny_
 - src: git+https://github.com/mother-of-all-self-hosting/ansible-role-cleanup.git
   version: main
   name: cleanup
