Fetch ansible-role-cinny from MASH project
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -100,7 +100,7 @@
   version: v0.52.8-0
   name: changedetection
   activation_prefix: changedetection_
-- src: git+https://iris.radicle.xyz/z3P5L5p1gs7TGCpmhaXKUYmTJNKpi.git
+- src: git+https://github.com/mother-of-all-self-hosting/ansible-role-cinny.git
   version: v4.10.2-1
   name: cinny
   activation_prefix: cinny_
