Add ddclient (ansible-role-ddclient) to files in templates/
Signed-off-by: Suguru Hirahara <did:key:z6MkvVZk1A3KBApWJXv2Ju4H14ErDfRGxh8zxdXSZ4vACDg5>

--- a/templates/requirements.yml
+++ b/templates/requirements.yml
@@ -148,6 +148,10 @@
   version: v2.16.3-1
   name: databasus
   activation_prefix: databasus_
+- src: git+https://github.com/mother-of-all-self-hosting/ansible-role-ddclient.git
+  version: v4.0.0-0
+  name: ddclient
+  activation_prefix: ddclient_
 - src: git+https://github.com/geerlingguy/ansible-role-docker
   version: 8.0.0
   name: docker
